Fixed blurb misalignment issue.

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ p.phrase {
 	position: fixed;
 	top: 50%;
 	left: 0px;
-	width: 99.5%;
+	width: 100%;
 	height: 10%;
 	display: flex;
 	align-items: flex-start;
